--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -2,9 +2,9 @@ ncmpcpp_directory = ~/.ncmpcpp
 mpd_music_dir = ~/Music
 visualizer_fifo_path = /tmp/mpd.fifo
 visualizer_output_name = "my_fifo"
-visualizer_in_stereo = yes
+visualizer_in_stereo = no
 visualizer_type = spectrum
-visualizer_look = ●║
+visualizer_look = ●│
 playlist_disable_highlight_delay = 2
 message_delay_time = 1
 browser_sort_format = {%l} | {%f}
@@ -27,3 +27,5 @@ header_visibility = no
 statusbar_visibility = no
 titles_visibility = no
 mouse_support = yes
+locked_screen_width_part = 40
+ask_for_locked_screen_width_part = no
